# backend/routes/v1/index.js
@@ -9,6 +9,7 @@ import scenesRouter from './scenes.js';
 import statsRouter from './stats.js';
 import settingsRouter from './settings.js';
 import weatherRouter from './weather.js';
+import automationsRouter from './automations.js';
 
 const router = express.Router();
 
@@ -23,5 +24,6 @@ router.use('/scenes', scenesRouter);
 router.use('/stats', statsRouter);
 router.use('/settings', settingsRouter);
 router.use('/weather', weatherRouter);
+router.use('/automations', automationsRouter);
 
 export default router;
